# prompt-optimizer

./: Makefile  README.md  pyproject.toml
prompt_optimizer/: chat_model.py  chat_prompt.py  instruction.py  load_model.py  opro.py
task_examples/: setup_logging.py  string_pager_widget.py
task_examples/asqa_as_bbh/: bbh_exemplar.py  bbh_optimizer.py  bbh_prompt.py  bbh_task.py
task_examples/asqa_as_bbh/dataset/: bbh_data_explorer.ipynb  bbh_optimized_prompts_20251119065500.pkl  bbh_optimized_prompts_20251119160353.pkl  bbh_results.ipynb  train.csv  valid.csv
tests/integration/prompt_optimizer/: test_load_model.py
tests/unit/prompt_optimizer/: test_chat_prompt.py  test_opro.py  test_optimizer.py
tests/unit/task_examples/asqa_as_bbh/: test_bbh_exemplars.py  test_bbh_task.py
